--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <a href="http://s25.joinserver.ru:25676" target="_blank" class="menu_item">Карта</a>
                         </li>
                         <li class="menu_item">
-                            <a href="/docs" class="menu_item">Правила</a>
+                            <a href="/foxcraft.github.io/docs" class="menu_item">Правила</a>
                         </li>
                         <li class="login">
                             <a href="https://vk.com/fox_crafty?w=app5619682_-202476595" class="login">Зайти на сервер</a>
