--- a/docs.html
+++ b/docs.html
@@ -21,7 +21,7 @@
                 <nav class="menu">
                     <ul class="menu_ul">
                         <li class="menu_item">
-                            <a href="/" class="menu_item">Главная</a>
+                            <a href="/foxcraft.github.io/" class="menu_item">Главная</a>
                         </li>
                         <li class="menu_item">
                             <a href="http://s25.joinserver.ru:25676" target="_blank" class="menu_item">Карта</a>
